src/test/deca/context/valid/not_bool.deca
// Description :
// test du not sur un booléen
//
// Résultats :
// ok

{
  boolean b;
  b = !true;
  b = !b;
  b = !false;
}
